# darwin_framework

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/darwin_framework/: Action.h  BallFollower.h  BallTracker.h  CM730.h  Camera.h  ColorFinder.h  DARwIn.h  Head.h  ImgProcess.h  Kinematics.h  Matrix.h  MotionManager.h  MotionModule.h  MotionStatus.h  Vector.h  Walking.h
include/darwin_framework/minIni/: minIni.h
src/: CM730.cpp  MX28.cpp
src/math/: Matrix.cpp  Plane.cpp  Point.cpp  Vector.cpp
src/minIni/: minIni.c
src/motion/: JointData.cpp  Kinematics.cpp  MotionManager.cpp  MotionStatus.cpp
src/motion/modules/: Action.cpp  Head.cpp  Walking.cpp
src/vision/: BallFollower.cpp  BallTracker.cpp  Camera.cpp  ColorFinder.cpp  Image.cpp  ImgProcess.cpp
