<?xml version="1.0"?>
<package>
  <name>darwin_framework</name>
  <version>0.0.0</version>
  <description>The darwin_framework package</description>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>MIT</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
